--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ keywords = ["japanese", "romaji", "hiragana"]
 license = "MIT"
 
 [dependencies]
+combine = "3.0.0-alpha"
+log = "0.3"
+env_logger = "0.4"
+lazy_static = "0.2"
